Fixed overlapping of dropdown menu, changed temporal lake plot to scatter

--- a/dash/assets/main.css
+++ b/dash/assets/main.css
@@ -17,3 +17,7 @@ body {
 .details {
     margin: 2rem;
 }
+
+.Select.is-open {
+    z-index: 1003;
+}
